Fix result card text-overflow

--- a/src/components/atoms/SearchResultCard/searchresultcard.module.scss
+++ b/src/components/atoms/SearchResultCard/searchresultcard.module.scss
@@ -4,11 +4,17 @@
 
 .container {
   @extend %elevation-2-normal;
-  align-items: center;
   background-color: $white;
-  display: flex;
   height: 100px;
   padding: 4px;
+}
+
+.image-placeholder {
+  background-color: $white;
+  float: left;
+  height: 100px;
+  margin-right: 24px;
+  width: 100px;
 }
 
 .image {
@@ -18,34 +24,32 @@
   width: 100px;
 }
 
-.image-placeholder {
-  background-color: $white;
-  height: 100px;
-  margin-right: 24px;
-  width: 100px;
-}
-
 .text {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
   overflow: hidden;
+  padding: 8px 8px 8px 0;
 }
 
 .title {
   color: $gray-1;
   font-size: $size-sub-heading-3;
   font-weight: $weight-bold;
-  line-height: 20px;
+  line-height: 24px;
   margin-bottom: 8px;
-  max-height: 40px;
+  max-height: 48px;
   overflow: hidden;
-  text-overflow: ellipsis;
 }
 
 .caption {
   color: $gray-2;
   font-size: $size-caption;
   font-weight: $weight-light;
-  height: 16px;
-  line-height: 16px;
+  height: 18px;
+  line-height: 18px;
   overflow: hidden;
   text-overflow: ellipsis;
   text-transform: capitalize;
